This adds the radio and the labels statements for the first question

--- a/index.css
+++ b/index.css
@@ -52,3 +52,9 @@ hr{
     font-style: italic;
     font-weight: bolder;
 }
+.question1 ul{
+    padding: 5px;
+}
+.question1 ul li{
+    padding: 5px;
+}
