--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@
     position: absolute;
     padding: 20px;
     top: 60px;
-    left: 36%;
+    left: 37%;
     background-color: white;
     border-radius: 10px;
 
@@ -41,20 +41,37 @@ hr{
     position: relative;
     top: 60px;
 }
-.question1{
+.questions{
     
     position: absolute;
     left: 50px;
     top: 120px;
     
 }
-.question1 p{
-    font-style: italic;
+.questions p{
     font-weight: bolder;
+    font-style: italic;
 }
-.question1 ul{
-    padding: 5px;
+.submit{
+    position: absolute;
+    bottom: -60px;
+    background-color: green;
 }
-.question1 ul li{
-    padding: 5px;
+.line{
+    top: 10px;
+    width: 380px;
+    left: -30px;
 }
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-top: 20px;
+    border-radius: 20px;
+  }
+
