--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@ hr{
     width: 380px;
     left: -30px;
 }
-button{
+#Btn{
     background-color: #4CAF50;
     border: none;
     color: white;
@@ -71,7 +71,7 @@ button{
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 360px;
     border-radius: 20px;
   }
   #results{
