--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -81,4 +81,4 @@ hr{
       margin-left: 10px;
       border-radius: 20px;
   }
-
+ */
