--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ hr{
     border-radius: 20px;
   }
 
-#empty{
+#result{
     background-color: blue;
     border: 1px solid black;
     height: 70px;
